2004-07-05  Callum McKenzie  <callum@physics.otago.ac.nz>

	* game.c:
	* game.h:
	* cursors.c:
	* cursors.h:	
	* gnobots.c: Provide cursor hints to show which way clicking the
	mouse will take you.

2004-06-30  Callum McKenzie  <callum@physics.otago.ac.nz>

	* teleport.png:
	* rteleport.png:
	* menu.c: Add custom menu icons for teleport and rteleport.

2004-06-23  Callum McKenzie  <callum@physics.otago.ac.nz>

	* game.c: 
	* menu.h:	
	* menu.c: Add menu items and a toolbar for the commands like
	teleport, wait, etc. Also includes logic to correctly set
	sensitivity.

2004-06-22  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnobots.c:	
	* game.c: Add basic mouse support. You can successfully play the
	game with the mouse, but there is no guide as to what direction
	will be used yet. Also, you can click at the title screen to start
	a new game.

2004-05-26  Callum McKenzie  <callum@physics.otago.ac.nz>

	* properties.c: Fix compiler warnings.

2004-03-03  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/gnobots2.xml: Update the version since it is still
	accurate.

2004-02-23  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/it/.cvsignore: Making it correct.

2004-02-22  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/Makefile.am:
	* help/it/gnobots2.xml:
	* help/it/gnobots2-it.omf:
	* help/it/legal.xml:
	* help/it/Makefile.am: Restored the old Italian documentation.

2004-02-19  Callum McKenzie  <callum@physics.otago.ac.nz>

	* properties.c (show_properties_dialog): Typo. Fixes bug #134442.

2004-02-14  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/es/gnobots2.xml: 
	* help/es/gnobots2-es.omf:
	* help/es/Makefile.am:
	* help/es/legal.xml:	
	* help/Makefile.am: Yet another conversion of an old translated
	document by someone who doesn't understand the language.

	* help/da/gnobots2.xml: Remove accidental reference to gtali in
	the appname entity.

2004-02-12  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/Makefile.am